bk_ida/gccida/c0/record_value_for_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11627:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+2Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11682:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rega)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11683:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rega)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11745:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT && mode_bitsize[mode] <= 0x40u ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11750:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rega)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/combine.c:11750:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rega)); 
                 ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_value_for_reg/src/obj/combine.o] Error 1
